--- a/index.html
+++ b/index.html
@@ -17,15 +17,23 @@
 
   <meta name="description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
   <link rel="canonical" href="https://paragraphle.com/">
-  <meta property="og:type" content="game" />
-  <meta property="og:title" content="Paragraphle &mdash; Daily Game" />
-  <meta property="og:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target."/>
-  <meta property="og:image" content="https://paragraphle.com/public/reading-robot.png">
+
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Paragraphle" />
+  <meta property="og:title" content="About" />
+  <meta property="og:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
+  <meta property="og:url" content="https://paragraphle.com/">
+  <meta property="og:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
   <meta property="og:image:width" content="2200">
   <meta property="og:image:height" content="1190">
-  <meta name="robots" content="max-image-preview:large">
+
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="https://paragraphle.com/public/reading-robot.png">
+  <meta name="twitter:title" content="About">
+  <meta name="twitter:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
+  <meta name="twitter:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
+  <meta name="twitter:image:alt" content="Abraham Lincoln looking not amused.">
+
+  <meta name="robots" content="max-image-preview:large">
 
   <link rel="stylesheet" href="src/tailwind.css">
 </head>
