Add back reset button

--- a/play/index.html
+++ b/play/index.html
@@ -98,6 +98,13 @@
         <span class="whitespace-nowrap font-semibold text-xs md:text-base">
           <span id="guessCount">0</span>&nbsp;Guess<span id="guessPlural">es</span>
         </span>
+        <button id="resetButton" class="
+          inline-flex items-center justify-center px-2 py-1 rounded-xl
+          bg-slate-600 text-white text-xs md:text-base font-semibold tracking-wide
+          transition-colors hover:bg-slate-500"
+        >
+          Reset
+        </button>
       </div>
     </div>
     <div class="h-1 bg-slate-700 rounded overflow-hidden">
