Add ai play script

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     gtag('config', 'G-8LNTR512CH');
   </script>
 
-  <meta name="description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
+  <meta name="description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia™ article of the day. Each guess reveals subtle clues about your target.">
   <link rel="canonical" href="https://paragraphle.com/">
 
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Paragraphle" />
   <meta property="og:title" content="About" />
-  <meta property="og:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
+  <meta property="og:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia™ article of the day. Each guess reveals subtle clues about your target.">
   <meta property="og:url" content="https://paragraphle.com/">
   <meta property="og:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
   <meta property="og:image:width" content="2200">
@@ -29,7 +29,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="About">
-  <meta name="twitter:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
+  <meta name="twitter:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia™ article of the day. Each guess reveals subtle clues about your target.">
   <meta name="twitter:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
   <meta name="twitter:image:alt" content="Abraham Lincoln looking not amused.">
 
@@ -63,7 +63,7 @@
     <section class="grid grid-cols-1 sm:grid-cols-2 sm:gap-8 items-center min-h-[calc(100svh-4rem)] snap-start">
       <div class="order-2 md:order-2">
         <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight mb-4">
-          Play Paragraphle, a daily game based on Wikipedia.
+          Play Paragraphle, a daily game based on Wikipedia™.
         </h1>
         <p class="mb-6">
           Each guess reveals new clues by matching paragraphs from your guess against the article of the day.
@@ -99,7 +99,7 @@
           Find the article of the day!
         </h2>
         <ul class="list-disc space-y-3 pl-5 marker:text-neutral-200">
-          <li>Each guess must be an existing Wikipedia article.</li>
+          <li>Each guess must be an existing Wikipedia™ article.</li>
           <li>The game tells you how close you are to the article of the day.</li>
           <li>Paragraphs from your guesses are ranked by how similar they are to the target.</li>
           <li>The closer you get to zero, the better!</li>
