--- a/play/index.html
+++ b/play/index.html
@@ -86,36 +86,72 @@
     </div>
   </div>
 
-  <header class="shrink-0 px-4 pt-6 pb-2 w-full max-w-4xl mx-auto select-none">
-    <div class="flex items-baseline justify-between mb-2">
-      <h1 class="text-md sm:text-xl font-extrabold tracking-tight">
+  <header class="fixed inset-x-0 top-0 z-1 bg-slate-900/95 backdrop-blur">
+    <div class="px-4 w-full max-w-4xl mx-auto h-16 flex items-center justify-between">
+      <h1 class="text-md sm:text-xl font-extrabold tracking-tight select-none">
         <a href="/">Paragraphle&nbsp;#<span id="dailyNumber"></span></a>
       </h1>
-      <div class="flex align-right items-center gap-3">
-        <span class="whitespace-nowrap font-semibold text-xs md:text-base hidden sm:block">
-          <span id="playerCount">0</span>&nbsp;Player<span id="playerPlural">s</span>
-        </span>
-        <span class="whitespace-nowrap font-semibold text-xs md:text-base">
-          <span id="guessCount">0</span>&nbsp;Guess<span id="guessPlural">es</span>
+      <div class="flex flex-row gap-3 items-center">
+        <span class="whitespace-nowrap font-semibold text-xs md:text-base border-2 py-1 px-2 rounded-md border-slate-600">
+          <span id="guessCount"></span>&nbsp;Guess<span id="guessPlural">es</span>
         </span>
         <button id="resetButton" class="
-          inline-flex items-center justify-center px-2 py-1 rounded-xl
-          bg-slate-600 text-white text-xs md:text-base font-semibold tracking-wide
-          transition-colors hover:bg-slate-500"
-        >
+            inline-flex items-center justify-center px-2 py-1 rounded-md
+            bg-slate-600 text-white text-xs md:text-base font-semibold tracking-wide
+            transition-colors hover:bg-slate-500 border-2 rounded-md border-slate-600
+        ">
           Reset
         </button>
+        <svg class="hover:bg-slate-600 hover:rounded-lg" xmlns="http://www.w3.org/2000/svg" id="menuIconClosed" width="30px" height="30px" viewBox="0 0 24 24" fill="none">
+          <path d="M4 18L20 18" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+          <path d="M4 12L20 12" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+          <path d="M4 6L20 6" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+        </svg>
       </div>
-    </div>
-    <div class="h-1 bg-slate-700 rounded overflow-hidden">
-      <div 
-        class="h-full w-0 absolute" 
-        id="progressBar"
-      ></div>
     </div>
   </header>
 
-  <main class="flex-1 px-4 w-full max-w-4xl mx-auto pt-4 pb-4 flex flex-col min-h-0 select-none">
+  <div id="sidebar" class="fixed inset-0 z-50 flex flex-row justify-end bg-slate-200/60 select-none hidden">
+    <div id="innerSidebar" class="flex flex-col w-64 h-full gap-3 p-4 bg-slate-200 text-center overflow-y-auto">
+        <div class="flex flex-row justify-end">
+          <button id="exitButton" class="bg-slate-600 text-lg px-5 py-1 rounded-md hover:bg-rose-500">X</button>
+        </div>
+        <div class="border-slate-600 border-2 bg-slate-300 rounded-md p-3 flex flex-col gap-3">
+          <a
+              href="../"
+              class="inline-flex items-center justify-center px-3 py-1 rounded-xl
+                  bg-slate-600 text-white font-semibold tracking-wide
+                  border-b-4 border-slate-600 text-sm
+                  transition-colors hover:bg-slate-500"
+          >
+              Home
+          </a>
+          <a
+              href="../about"
+              class="inline-flex items-center justify-center px-3 py-1 rounded-xl
+                  bg-slate-600 text-white font-semibold tracking-wide
+                  border-b-4 border-slate-600 text-sm
+                  transition-colors hover:bg-slate-500"
+          >
+              About
+          </a>
+          <a
+              href="../play"
+              class="inline-flex items-center justify-center px-3 py-1 rounded-xl
+                  bg-slate-600 text-white font-semibold tracking-wide
+                  border-b-4 border-slate-600 text-sm
+                  transition-colors hover:bg-slate-500"
+          >
+              Play
+          </a>
+        </div>
+        <p class="border-slate-600 border-2 bg-slate-300 rounded-md px-3 py-1 text-slate-600 font-extrabold">
+            Current Players: <span id="playerCount"></span>
+        </p>
+    </div>
+  </div>
+
+  <main class="mt-14 flex-1 px-4 w-full max-w-4xl mx-auto pt-4 pb-4 flex flex-col min-h-0 select-none">
     <div
         class="mb-4 flex items-center justify-between text-sm md:text-base font-semibold
         px-3 py-1 rounded border border-white-600 text-white"
@@ -197,6 +233,7 @@
 
     </div>
   </footer>
-  <script src="../dist/game.js"></script>
+  <script type="module" src="../dist/game.js"></script>
+  <script type="module" src="../dist/sidebar.js"></script>
 </body>
 </html>
