Add about button

--- a/index.html
+++ b/index.html
@@ -131,12 +131,21 @@
         <h2 id="howto-desc" class="mb-4">
           Find the article of the day!
         </h2>
-        <ul class="list-disc space-y-3 pl-5 marker:text-neutral-200">
+        <ul class="list-disc space-y-3 pl-5 marker:text-neutral-200 mb-6">
           <li>Each guess must be an existing Wikipedia™ article.</li>
           <li>The game tells you how close you are to the article of the day.</li>
           <li>Paragraphs from your guesses are ranked by how similar they are to the target.</li>
           <li>The closer you get to zero, the better!</li>
         </ul>
+        <a
+          href="/about"
+          class="inline-flex items-center justify-center px-6 py-3 rounded-xl
+                bg-slate-600 text-white font-semibold uppercase tracking-wide
+                border-b-4 border-slate-600
+                transition-colors hover:bg-slate-500"
+        >
+          About
+        </a>
       </div>
 
       <div class="order-1 md:order-2">
