--- a/index.html
+++ b/index.html
@@ -77,6 +77,15 @@
               About
           </a>
           <a
+              href="../how-to-play"
+              class="inline-flex items-center justify-center px-3 py-1 rounded-xl
+                  bg-slate-600 text-white font-semibold tracking-wide
+                  border-b-4 border-slate-600 text-sm
+                  transition-colors hover:bg-slate-500"
+          >
+              How to Play
+          </a>
+          <a
               href="../play"
               class="inline-flex items-center justify-center px-3 py-1 rounded-xl
                   bg-slate-600 text-white font-semibold tracking-wide
