Add play button on every page

--- a/about/index.html
+++ b/about/index.html
@@ -44,11 +44,21 @@
       <h1 class="text-md sm:text-xl font-extrabold tracking-tight select-none">
         <a href="/">Paragraphle</a>
       </h1>
-      <svg class="hover:bg-slate-600 hover:rounded-lg" xmlns="http://www.w3.org/2000/svg" id="menuIconClosed" width="30px" height="30px" viewBox="0 0 24 24" fill="none">
-        <path d="M4 18L20 18" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
-        <path d="M4 12L20 12" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
-        <path d="M4 6L20 6" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
-      </svg>
+      <div class="flex flex-row gap-3 items-center">
+        <a
+          href="/play"
+          class="inline-flex items-center justify-center px-2 py-1 rounded-md
+            bg-slate-600 text-white text-xs md:text-base font-semibold tracking-wide
+            transition-colors hover:bg-slate-500 border-2 rounded-md border-slate-600"
+          >
+            Play
+        </a>
+        <svg class="hover:bg-slate-600 hover:rounded-lg" xmlns="http://www.w3.org/2000/svg" id="menuIconClosed" width="30px" height="30px" viewBox="0 0 24 24" fill="none">
+          <path d="M4 18L20 18" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+          <path d="M4 12L20 12" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+          <path d="M4 6L20 6" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </div>
     </div>
   </header>
   
