Update canonical links

--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head> 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paragraphle &mdash; Daily Game</title>
+  <title>Paragraphle &mdash; About</title>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8LNTR512CH"></script>
@@ -16,13 +16,13 @@
   </script>
 
   <meta name="description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
-  <link rel="canonical" href="https://paragraphle.com/">
+  <link rel="canonical" href="https://paragraphle.com/about/">
 
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Paragraphle" />
   <meta property="og:title" content="About" />
   <meta property="og:description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
-  <meta property="og:url" content="https://paragraphle.com/">
+  <meta property="og:url" content="https://paragraphle.com/about/">
   <meta property="og:image" content="https://paragraphle.com/public/nonplussed-lincoln.jpg">
   <meta property="og:image:width" content="2200">
   <meta property="og:image:height" content="1190">
