--- a/how-to-play/index.html
+++ b/how-to-play/index.html
@@ -49,7 +49,7 @@
           href="/play"
           class="inline-flex items-center justify-center px-2 py-1 rounded-md
             bg-slate-600 text-white text-xs md:text-base font-semibold tracking-wide
-            transition-colors hover:bg-slate-500 border-2 rounded-md border-slate-600"
+            transition-colors hover:bg-slate-500 hover:border-slate-500 border-2 rounded-md border-slate-600"
           >
             Play
         </a>
