--- a/how-to-play/index.html
+++ b/how-to-play/index.html
@@ -6,13 +6,13 @@
   <title>Paragraphle &mdash; How to Play</title>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8LNTR512CH"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-L77RQSSE79"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    gtag('config', 'G-8LNTR512CH');
+    gtag('config', 'G-L77RQSSE79');
   </script>
 
   <meta name="description" content="Play Paragraphle, a daily game where you use semantic search to find the Wikipedia article of the day. Each guess reveals subtle clues about your target.">
