update stats panel

--- a/about/index.html
+++ b/about/index.html
@@ -105,9 +105,18 @@
               Play
           </a>
         </div>
-        <p class="border-slate-600 border-2 bg-slate-300 rounded-md px-3 py-1 text-slate-600 font-extrabold">
-            Current Players: <span id="playerCount"></span>
-        </p>
+        <div class="border-slate-600 border-2 bg-slate-300 rounded-md px-3 py-1 text-slate-600 font-extrabold">
+          <h3>Daily Stats</h3>
+          <div class="flex flex-row justify-between text-sm">
+            <p>👤 Current Players</p><p id="playerCount">...</p>
+          </div>
+          <div class="flex flex-row justify-between text-sm">
+            <p>✅ Total Solves</p><p id="solveCount">...</p>
+          </div>
+          <div class="flex flex-row justify-between text-sm">
+            <p>🏅 Average Score</p><p id="averageScore">...</p>
+          </div>
+        </div>
     </div>
   </div>
 
